# blender-facade-synthesis

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml
docs/adr/: 0001-local-web-studio-and-worker.md  0002-task-specific-datasets.md  0003-floorline-heatmap-is-the-floorline-training-target.md  0004-window-count-is-derived-from-instance-truth.md  0005-treat-mixed-use-as-a-building-use-class.md  0006-provenance-gate-external-visual-assets.md  0007-split-by-building-recipe-at-generation-time.md  0008-web-studio-produces-data-not-models.md  0009-use-a-manifest-plus-task-native-annotations.md  0010-fail-closed-on-non-blender-or-invalid-output.md  0011-require-human-confirmation-before-and-after-generation.md  0012-render-the-full-facade-view-family.md  0013-add-a-facade-component-segmentation-package.md  0014-use-user-selected-daylight-profiles.md  0015-target-post-2000-chinese-urban-facades.md  0016-use-light-controlled-foreground-occlusion.md  0017-issue-an-immutable-dataset-receipt.md  0018-use-fingerprint-only-internal-visual-assets.md  0019-serialize-local-blenderproc-jobs.md  0020-resume-from-validated-samples-only.md  0021-absorb-evaluated-v31-generator-code-locally.md  0022-bootstrap-trainable-generation-through-blenderproc.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
scripts/: start_studio.py
src/facade_synth/: __init__.py  __main__.py  blenderproc_entry.py  (+5 more)
tests/: test_blenderproc_publication_acceptance.py  test_package_contracts.py  test_publication_contract.py  test_runtime_gate.py  test_seed_v31_regression.py  test_web_api.py
(+13 files in other folders)
